# tamr

./: .gitignore  .gitmodules  README.md  awesome.md  pipeline.sh
amr_aligner/: eager_actions_evaluator.py  eager_oracle.py  refresh_alignments.py  replace_comments.py  rule_base_align.py
amr_aligner/rule_based_aligner/: matcher.py  updater.py
amr_aligner/smatch/: fast_smatch.py
amr_parser/: CMakeLists.txt
amr_parser/scripts/: eval_eager.sh
amr_parser/src/: CMakeLists.txt  corpus.cc  corpus.h  ds.cc  ds.h  logging.cc  logging.h  lstm.cc  lstm.h  math_utils.cc  math_utils.h  sys_utils.cc  sys_utils.h  trainer_utils.cc  trainer_utils.h
amr_parser/src/left_to_right/: CMakeLists.txt  ensemble.cc  main.cc
amr_parser/src/left_to_right/decode/: CMakeLists.txt  testing.cc  testing.h
amr_parser/src/left_to_right/evaluate/: CMakeLists.txt  evaluate.cc  evaluate.h
amr_parser/src/left_to_right/parser/: CMakeLists.txt  parser.cc  parser.h  parser_builder.cc  parser_builder.h  parser_eager.cc  parser_eager.h  parser_swap.cc  parser_swap.h
amr_parser/src/left_to_right/system/: CMakeLists.txt  eager.cc  eager.h  state.cc  state.h  swap.cc  swap.h  system.cc  system.h
amr_parser/src/left_to_right/train/: CMakeLists.txt  algorithm.h  train.cc  train.h  train_supervised.cc  train_supervised.h
release/ldc2014t12/: README.md  amr-release-1.0-training_fix.patch  amr-release-1.0-training_fix.txt.cdec_tok.tamr_alignment.bz2  amr-release-1.0-training_fix.txt.sd_tok.tamr_alignment.bz2
release/ldc2017t10/: README.md  amr-release-2.0-amrs-training-bolt.txt.cdec_tok.tamr_alignment.bz2  amr-release-2.0-amrs-training-cctv.txt.no_wiki.cdec_tok.tamr_alignment.bz2  amr-release-2.0-amrs-training-dfa_fix.patch  amr-release-2.0-amrs-training-dfb_fix.patch  (+11 more)
(+6 files in other folders)
